--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -257,10 +257,10 @@
                     {% if project.boundary.coordinates %}
                     <div class="flex-this">
                     <div class="project-left-sidebar"><p class="bold">Boundary</p></div>
-                    <div>
-                        <div class="flex-this">
-                            <p>
-                                {% if project.name_of_boundary %}
+                    <div class="w-100">
+                        <div class="flex-this w-100">
+                            <p class="w-100">
+                                {% if 'native-land.ca' in project.source_of_boundary and project.name_of_boundary %}
                                     <span class="italic" style="font-size: 20px">
                                         <a href="{{ project.source_of_boundary }}"
                                            class="default-a" target="_blank" rel="noopener">
