--- a/templates/public.html
+++ b/templates/public.html
@@ -460,28 +460,36 @@
                     <div>
                         <div class="flex-this space-between">
                             <div class="flex-this">
-                                <h2 class="primary-black-text no-top-margin">Request to join</h2>  
-                                <div class="tooltip" style="margin-top: 10px; margin-left: 5px;"><strong>i</strong>
-                                    <span class="tooltiptext">
-                                        <strong>You should request to join community and institution accounts you are already affiliated with. </strong> <br><br>
-                                        If you wish to collaborate with a community or institution you are not affiliated with, you will connect with them through Projects. You do not need to join their account.
-                                    </span>
-                                </div>                            
+                                <h2 class="primary-black-text no-top-margin">Request to join</h2>
                             </div>
                             <div>
                                 <div class="close-modal-btn"><i class="fa-regular fa-xmark fa-xl"></i></div>
                             </div>
                         </div>
 
+                        {% if institution %}
+                            Request to join an account for an institution you are already affiliated with.
+                            If you wish to collaborate with an institution you are not affiliated with,
+                            you can contact them or connect with them through Projects and do not need
+                            to join their account.
+                            <br><br>
+                        {% elif community %}
+                            Request to join an account for a community that you are already affiliated with.
+                            If you wish to collaborate with a community you are not affiliated with,
+                            you can contact them or connect with them through Projects and do not need to join
+                            their account.
+                            <br><br>
+                        {% endif %}
 
                         <p class="no-top-margin">
                             Every account has various responsibilities within the
-                            {% if institution %}institution{% elif community %}community{% endif %}.
+                            {% if institution %}
+                                institution.
+                            {% elif community %}
+                                community.
+                            {% endif %}
                             <br>
-                            <strong>Administrator:</strong> responsible for adding, editing and removing members<br>
-                            <strong>Editor:</strong> responsible for customizing Labels and Projects<br>
-                            <strong>Viewer:</strong> can view activity happening on the hub
-                        </p>  
+                        </p>
                     </div>
 
                         <div class="margin-left-8">
@@ -490,13 +498,32 @@
 
                                 <div class="flex-this column w-100">
                                     <div class="margin-top-8">
-                                        <label>Requested Responsibility</label><br>
+                                        <label>Requested Responsibility</label>
+                                        {% if institution %}
+                                            <div class="tooltip" style="margin-top: 10px; margin-left: 5px;"><strong>i</strong>
+                                                <span class="tooltiptext" >
+                                                    <strong>Administrator:</strong> Add, remove, and update account’s users, and abilities of an Editor<br><br>
+                                                    <strong>Editor:</strong> Place Notices, create and edit Projects, and notify communities<br><br>
+                                                    <strong>Viewer:</strong> View account’s Projects, Connections, and Members without edit access
+                                                </span>
+                                            </div>
+                                        {% elif community %}
+                                            <div class="tooltip" style="margin-top: 10px; margin-left: 5px;"><strong>i</strong>
+                                                <span class="tooltiptext">
+                                                    <strong>Administrator:</strong> Add, remove, and update account’s users, and abilities of an Editor<br><br>
+                                                    <strong>Editor:</strong> Customize, edit, and review account Labels, and create and edit Projects<br><br>
+                                                    <strong>Viewer:</strong> View account’s Labels, Projects, Connections, and Members without edit access
+                                                </span>
+                                            </div>
+                                        {% endif %}
+
+                                        <br>
                                         {{ join_form.role }}
                                         {% if join_form.role.errors %}
                                             <div class="msg-red w-50"><small>{{ join_form.role.errors.as_text }}</small></div> 
                                         {% endif %}
                                     </div>
-                                    
+
                                     <div class="margin-top-8">
                                         <label>Include a message with this request</label><br>
                                         {{ join_form.message }}
