feat: loaded toastr in base.html file

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
               });
             });
         </script>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     </body>
 
 </html>
