feat: added toastr css

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,10 @@
         <!-- Font Awesome Icons -->
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
         <script src="https://kit.fontawesome.com/e4bd889de7.js" crossorigin="anonymous"></script>
-                
+
+        <!-- Toastr CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css  ">
+
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/register.css' %}">
@@ -59,6 +62,8 @@
               });
             });
         </script>
+
+        <!-- Toastr JS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     </body>
 
