--- a/localcontexts/static/css/dashboard.css
+++ b/localcontexts/static/css/dashboard.css
@@ -40,7 +40,7 @@
     height: 190px;
 }
 
-.dashcard-text-container { width: 70%;}
+.dashcard-text-container { min-width: 51%;}
 
 .dashcard-h3 {
     font-weight: bold;
