--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -231,6 +231,7 @@ input:focus {
 /* MARGIN & PADDING */
 .margin-top-1 { margin-top: 1%; }
 .margin-right-1 { margin-right: 1%; }
+.margin-right-2 { margin-right: 2%;}
 .margin-left-1 { margin-left: 1%; }
 .margin-top-2 { margin-top: 2%; }
 .margin-bottom-2 { margin-bottom: 2%; }
@@ -238,6 +239,7 @@ input:focus {
 .no-top-margin { margin-top: 0; }
 .no-bottom-margin { margin-bottom: 0; }
 .no-margin { margin: 0 !important; }
+.no-right-margin {margin-right: 0 !important;}
 .margin-top-8 { margin-top: 8px; }
 .margin-top-10 { margin-top: 10px; }
 .margin-bottom-8 { margin-bottom: 8px; }
@@ -674,7 +676,7 @@ visibility: visible;
 
 /* Count cards on dashcards on profiles */
 .stats-card-container {
-    width: 240px; 
+    width: 22%; 
     margin: 10px;
 }
 
