--- a/templates/partials/infocards/_community-dashcard.html
+++ b/templates/partials/infocards/_community-dashcard.html
@@ -50,9 +50,9 @@
                 </div>
 
                 <!-- Count cards -->
-                <div class="flex-this column stats-card-container">
+                <div class="flex-this column stats-card-container  bold no-right-margin">
 
-                    <div class="stats-card flex-this space-between">
+                    <div class="stats-card flex-this flex-start">
                         <div>
                             <p>
                                 <!-- How many Labels has the community applied to projects -->
@@ -60,10 +60,10 @@
                                 {% if label_count < 10 %}0{{ label_count }}{% else %}{{ label_count }}{% endif %}
                             </p>
                         </div>
-                        <div><span>Labels</span></div>
+                        <div class="margin-left-16"><span>Labels</span></div>
                     </div>
     
-                    <div class="stats-card flex-this space-between">
+                    <div class="stats-card flex-this flex-start">
                         <div>
                             <p>
                                 <!-- Notices that a community has been notified about -->
@@ -71,17 +71,17 @@
                                 {% if notice_count < 10 %}0{{ notice_count }}{% else %}{{ notice_count }}{% endif %}
                             </p>
                         </div>
-                        <div><span>Notices</span></div>
+                        <div class="margin-left-16"><span>Notices</span></div>
                     </div>
     
-                    <div class="stats-card flex-this space-between">
+                    <div class="stats-card flex-this flex-start">
                         <div>
                             <p>
                                 {% connections_count community as connect_count %}
                                 {% if connect_count < 10 %}0{{ connect_count }}{% else %}{{ connect_count }}{% endif %}
                             </p>
                         </div>
-                        <div><span>Connections</span></div>
+                        <div class="margin-left-16"><span>Connections</span></div>
                     </div>
                 </div>
 
