--- a/templates/partials/infocards/_institution-dashcard.html
+++ b/templates/partials/infocards/_institution-dashcard.html
@@ -48,30 +48,30 @@
                 </div>
 
                 <!-- Count cards -->
-                <div class="flex-this column stats-card-container">
+                <div class="flex-this column stats-card-container bold no-right-margin">
 
                     <!-- Count of Labels that have been applied to institution projects -->
                     {% get_labels_count institution as total_labels %}
-                    <div class="stats-card flex-this space-between">
+                    <div class="stats-card flex-this flex-start">
                         <div><p>{% if total_labels < 10 %} 0{{ total_labels }} {% else %} {{ total_labels }} {% endif %}</p></div>
-                        <div><span>Labels</span></div>
+                        <div class="margin-left-16"><span>Labels</span></div>
                     </div>
                     
                     <!-- Count of Notices institution has placed -->
                     {% get_notices_count institution as total_notices %}
-                    <div class="stats-card flex-this space-between">
+                    <div class="stats-card flex-this flex-start">
                         <div><p>{% if total_notices < 10 %} 0{{ total_notices }} {% else %} {{ total_notices }} {% endif %}</p></div>
-                        <div><span>Notices</span></div>
+                        <div class="margin-left-16"><span>Notices</span></div>
                     </div>
     
-                    <div class="stats-card flex-this space-between">
+                    <div class="stats-card flex-this flex-start">
                         <div>
                             <p>
                                 {% connections_count institution as connect_count %}
                                 {% if connect_count < 10 %}0{{ connect_count }}{% else %}{{ connect_count }}{% endif %}
                             </p>
                         </div>
-                        <div><span>Connections</span></div>
+                        <div class="margin-left-16"><span>Connections</span></div>
                     </div>
                 </div>
 
