--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -1,34 +1,36 @@
 {% load static %}
 <div class="dashcard">
-  <div class="flex-this">
-    <div class="researcher-img-container">
-      <img
-        loading="lazy"
-        class="profile-img"
-        src=" {% if researcher.image %} {{ researcher.image.url }} {% else %} {% static 'images/placeholders/researcher-place.jpg' %} {% endif %}"
-        alt="{{ researcher.researcher_name }} image"
-      />
-    </div>
-    <div class="flex-this column dashcard-text-container">
-      <div>
-        <h3 class="dashcard-h3 darkteal-text">
-          {% firstof researcher.user.get_full_name researcher.user.username %}
-        </h3>
+  <div class="flex-this space-between">
+    <div class="flex-this">
+      <div class="researcher-img-container">
+        <img
+          loading="lazy"
+          class="profile-img"
+          src=" {% if researcher.image %} {{ researcher.image.url }} {% else %} {% static 'images/placeholders/researcher-place.jpg' %} {% endif %}"
+          alt="{{ researcher.researcher_name }} image"
+        />
       </div>
-      <div>
-        <p class="dashcard-subheader">
-          Researcher | Location: {{ researcher.user.user_profile.get_location }}
-        </p>
-      </div>
-      <div>
-        <p class="dashcard-description description-sm">
-          {% if researcher.description %}{{ researcher.description }} {% else %}
-          No description provided. {% endif %}
-        </p>
+      <div class="flex-this column dashcard-text-container">
+        <div>
+          <h3 class="dashcard-h3 darkteal-text">
+            {% firstof researcher.user.get_full_name researcher.user.username %}
+          </h3>
+        </div>
+        <div>
+          <p class="dashcard-subheader">
+            Researcher | Location: {{ researcher.user.user_profile.get_location }}
+          </p>
+        </div>
+        <div>
+          <p class="dashcard-description description-sm">
+            {% if researcher.description %}{{ researcher.description }} {% else %}
+            No description provided. {% endif %}
+          </p>
+        </div>
       </div>
     </div>
 
-    <div class="dashcard-btn-container">
+    <div class="dashcard-btn-container margin-right-2">
 
       <div class="flex-this gap-half">
         {% if '/registry/' in request.path %}
