Updated Community and Institution account cards

--- a/templates/partials/infocards/_community-dashcard.html
+++ b/templates/partials/infocards/_community-dashcard.html
@@ -27,8 +27,8 @@
             
         </div>
             <!-- Image, headers, description -->
-        <div class="flex-this">
-
+        <div class="flex-this space-between">
+            <div class="flex-this">
                 <div class="dashcard-img-container">
                     <img loading="lazy" 
                         class="profile-img" 
@@ -48,7 +48,7 @@
                     </div>
                     <div><p class="dashcard-description description-sm">{% if community.description %}{{ community.description }} {% else %} No description provided. {% endif %}</p></div>
                 </div>
-
+            </div>
                 <!-- Count cards -->
                 <div class="flex-this column stats-card-container  bold no-right-margin">
 
