--- a/templates/partials/infocards/_institution-dashcard.html
+++ b/templates/partials/infocards/_institution-dashcard.html
@@ -26,8 +26,8 @@
             
         </div>
             <!-- Image, headers, description -->
-        <div class="flex-this">
-
+        <div class="flex-this space-between">
+            <div class="flex-this">
                 <div class="dashcard-img-container">
                     <img loading="lazy" 
                         class="profile-img" 
@@ -46,7 +46,7 @@
                     </div>
                     <div><p class="dashcard-description description-sm">{% if institution.description %}{{ institution.description }} {% else %} No description provided. {% endif %}</p></div>
                 </div>
-
+            </div>
                 <!-- Count cards -->
                 <div class="flex-this column stats-card-container bold no-right-margin">
 
