--- a/templates/public.html
+++ b/templates/public.html
@@ -483,7 +483,7 @@
 
                     </div>
 
-                        <div class="margin-left-8">
+                        <div>
                             <form id="requestToJoinForm" method="POST" action="">
                                 {% csrf_token %}
 
