Updated size of down pointer on project actions

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -313,7 +313,7 @@
                                     </p>                                
                                 </div>
                                 <div>
-                                    <i id="{{community.id}}" onclick="showProjectLabels(this)" class="fa-solid fa-angle-down pointer" aria-label="Show Project Labels"></i>
+                                    <i id="{{community.id}}" onclick="showProjectLabels(this)" class="fa-solid fa-angle-down pointer fa-2x" aria-label="Show Project Labels"></i>
                                 </div>
                             </div>
                             <div id="showContent-{{community.id}}" class="hide">
