feat: added indication on NLD selection page of account creation

--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -149,6 +149,11 @@
                     <input type="checkbox" id="share-boundary-publicly" name="share-boundary-publicly">
                     <label for="share-boundary-publicly">Share Boundary Publicly</label>
                 </div>
+                <br>
+                <p>
+                    You can update, remove, or change the visibility settings
+                    for your boundary in this account's settings.
+                </p>
 
             </div>
 
