feat: added indication on shapefile upload page of account creation

--- a/templates/communities/upload-boundary-file.html
+++ b/templates/communities/upload-boundary-file.html
@@ -173,6 +173,12 @@
         <div id="share-boundary-publicly-wrapper" class="invisible">
             <input type="checkbox" id="share-boundary-publicly" name="share-boundary-publicly">
             <label for="share-boundary-publicly">Share Boundary Publicly</label>
+
+            <br>
+            <p>
+                You can update, remove, or change the visibility settings
+                for your boundary in this account's settings.
+            </p>
         </div>
     </div>
 
