feat: adjusted style on shapefile upload page of account creation

--- a/templates/communities/upload-boundary-file.html
+++ b/templates/communities/upload-boundary-file.html
@@ -82,6 +82,9 @@
             padding-top: 12px;
 
         }
+        #can-change-in-settings-indication{
+            width: 75%
+        }
         #share-boundary-publicly-wrapper input{
             transform: scale(2);
         }
@@ -173,13 +176,11 @@
         <div id="share-boundary-publicly-wrapper" class="invisible">
             <input type="checkbox" id="share-boundary-publicly" name="share-boundary-publicly">
             <label for="share-boundary-publicly">Share Boundary Publicly</label>
-
-            <br>
-            <p>
-                You can update, remove, or change the visibility settings
-                for your boundary in this account's settings.
-            </p>
         </div>
+        <p id="can-change-in-settings-indication">
+            You can update, remove, or change the visibility settings
+            for your boundary in this account's settings.
+        </p>
     </div>
 
     <div class="flex-this w-90" id="buttonRow">
