feat: adjusted style on NLD selection page of account creation

--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -54,6 +54,9 @@
             padding-top: 12px;
 
         }
+        #can-change-in-settings-indication{
+            width: 75%
+        }
         #share-boundary-publicly-wrapper input{
             transform: scale(2);
         }
@@ -149,8 +152,8 @@
                     <input type="checkbox" id="share-boundary-publicly" name="share-boundary-publicly">
                     <label for="share-boundary-publicly">Share Boundary Publicly</label>
                 </div>
-                <br>
-                <p>
+
+                <p id="can-change-in-settings-indication">
                     You can update, remove, or change the visibility settings
                     for your boundary in this account's settings.
                 </p>
