feat: used 100vw to fix the double scrollbar issue

--- a/localcontexts/static/css/modals.css
+++ b/localcontexts/static/css/modals.css
@@ -5,6 +5,7 @@
     left: 0;
     top: 0;
     overflow: auto;
+    height: 100vw;
     background-color: #fff;
     width: 100%;
     border-radius: 4px;
