--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -296,6 +296,7 @@ input:focus {
 .w-50 { width: 50%; }
 .w-60 { width: 60%; }
 .w-70 { width: 70%; }
+.w-75 { width: 75%; }
 .w-80 { width: 80%; }
 .w-90 { width: 90%; }
 .w-100 { width: 100%; }
