--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -44,7 +44,7 @@
             </div>
 
 
-            <div>
+            <div class="margin-bottom-8">
                 <label for="primary_institution">Primary Institution</label>
                 <div class="tooltip"><strong>i</strong>
                     <span class="tooltiptext">If you are associated with an institution, please list your primary institution.</span>
@@ -55,8 +55,13 @@
                 {% endif %}
             </div>
 
-            <div class="w-100">
-                <div class="pad-top-1-5">
+            <div class="margin-bottom-8">
+                <label>Researcher Website</label>
+                {{ form.website }}
+            </div>
+
+            <div>
+                <div>
                     <label for="description">Researcher Description</label>
                     <div class="tooltip"><strong>i</strong>
                         <span class="tooltiptext">This is a place for you to share your research interests and expertise.</span>
@@ -66,13 +71,6 @@
                     {{ form.description }}
                 </div>
                 <small id="charCount" class="block text-align-right">200/200</small>
-            </div>
-
-            <div class="w-100">
-                <div class="pad-top-1-5">
-                    <label>Researcher Website</label>
-                    {{ form.website }}
-                </div>
             </div>
 
             <div class="flex-this space-between">
