--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="dashcard-btn-container margin-right-2">
+    <div class="dashcard-btn-container">
 
       <div class="flex-this gap-half">
         {% if '/registry/' in request.path %}
@@ -49,35 +49,33 @@
             </div>
         {% endif %}
 
-        <div>
-          {% if '/dashboard/' in request.path %} {% if researcher.get_projects %}
-              <a
-                class="primary-btn action-btn"
-                href="{% url 'researcher-projects' researcher.id %}"
-                >View account</a
-              >
-          {% else %}
-              <a
-                class="primary-btn action-btn"
-                href="{% url 'researcher-notices' researcher.id %}"
-                >View account</a
-              >
-          {% endif %} {% endif %}
-        </div>
-        {% if '/dashboard/' in request.path %}
-          <div class="margin-left-8 flex-this gap-half">
-              <!-- Notification -->
-              {% include 'snippets/notifications.html' with scope=researcher.id %}
-              <!-- Settings -->
+        {% if '/dashboard/' in request.path %} 
+          <div class="flex-this gap-half">
               <div>
                 <a
-                  href="{% url 'update-researcher' researcher.id %}"
-                  class="round-btn-small darkteal-text primary-btn white-btn"
-                  ><i class="no-margin fa fa-cog" aria-hidden="true"></i
-                ></a>
-              </div>          
+                  class="primary-btn action-btn"
+                  href="{% if researcher.get_projects %}{% url 'researcher-projects' researcher.id %}{% else %}{% url 'researcher-notices' researcher.id %}{% endif %}"
+                  >View account</a
+                >
+              </div>
+
+              <div class="margin-left-8 flex-this gap-half">
+                <!-- Notification -->
+                {% include 'snippets/notifications.html' with scope=researcher.id %}
+                <!-- Settings -->
+                <div>
+                  <a
+                    href="{% url 'update-researcher' researcher.id %}"
+                    class="round-btn-small darkteal-text primary-btn white-btn"
+                  >
+                    <i class="no-margin fa fa-cog" aria-hidden="true"></i>
+                  </a>
+                </div>          
+              </div>
           </div>
         {% endif %}
+
+        
       </div>
 
     </div>
