--- a/templates/snippets/modals/remove-member-modal.html
+++ b/templates/snippets/modals/remove-member-modal.html
@@ -14,9 +14,7 @@
                     {% if editor %} {% firstof editor.get_full_name editor.username %} {% endif %}
                     {% if viewer %} {% firstof viewer.get_full_name viewer.username %} {% endif %}
                     from
-                    {% if community %} {{ community.community_name }}{% endif %}
-                    {% if institution %} {{ institution.institution_name }}{% endif %}
-                    ? 
+                    {% if community %} {{ community.community_name }}{% endif %}{% if institution %} {{ institution.institution_name }}{% endif %}{% if service_provider %} {{ service_provider.name }}{% endif %}?
                 </p>  
             </div>
             <div class="flex-this w-100 text-align-center">
@@ -43,7 +41,13 @@
                         {% if viewer %}
                             href="{% url 'remove-institution-member' institution.id viewer.id %}" 
                         {% endif %}
-                    {% endif %} 
+                    {% endif %}
+
+                    {% if service_provider %}
+                        {% if editor %}
+                            href="{% url 'service-provider-remove-member' service_provider.id editor.id %}" 
+                        {% endif %}
+                    {% endif %}
                     class="primary-btn white-btn margin-right-1"
                 >
                 Yes, remove member</a>    
