Set isbusiness and primary_instituion logic

--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -57,7 +57,7 @@
 
         <div class="flex-this w-100 space-between margin-top-2">
             <div class='w-50 margin-right-1'>
-                <label for="primary_institution">Primary Institution<span class="orange-text required-label" title="">*</span></label>
+                <label for="primary_institution">Primary Institution</label>
                 <div class="tooltip"><strong>i</strong>
                     <span class="tooltiptext">If you are associated with an institution, please list your primary institution.</span>
                 </div>
