feat: hide share-boundary-publicly input

--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -1,5 +1,9 @@
 {% load static %} {% block content %}
-
+        <style>
+            #share-boundary-publicly-wrapper{
+                display: none;
+            }
+        </style>
         <div class="content-card-v2 content-card-space">
             <div>
                 <small class="bold">
