feat: changed content and changed style to italics

--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -55,7 +55,8 @@
 
         }
         #can-change-in-settings-indication{
-            width: 75%
+            width: 75%;
+            font-style: italic;
         }
         #share-boundary-publicly-wrapper input{
             transform: scale(2);
@@ -154,8 +155,7 @@
                 </div>
 
                 <p id="can-change-in-settings-indication">
-                    You can update, remove, or change the visibility settings
-                    for your boundary in this account's settings.
+                    Your boundary and its visibility can be updated or removed in your account's settings.
                 </p>
 
             </div>
