--- a/templates/communities/upload-boundary-file.html
+++ b/templates/communities/upload-boundary-file.html
@@ -83,7 +83,8 @@
 
         }
         #can-change-in-settings-indication{
-            width: 75%
+            width: 75%;
+            font-style: italic;
         }
         #share-boundary-publicly-wrapper input{
             transform: scale(2);
@@ -178,8 +179,7 @@
             <label for="share-boundary-publicly">Share Boundary Publicly</label>
         </div>
         <p id="can-change-in-settings-indication">
-            You can update, remove, or change the visibility settings
-            for your boundary in this account's settings.
+            Your boundary and its visibility can be updated or removed in your account's settings.
         </p>
     </div>
 
