margin-top-1 to mt-1p

--- a/templates/accounts/newsletter-unsubscription.html
+++ b/templates/accounts/newsletter-unsubscription.html
@@ -16,7 +16,7 @@
 
                             <div class="flex-this column w-70">
                                 <label>What topic(s) are you interested in? <br> <em>(Check all that apply):<span title="Required" class="red-text"> *</span></em></label><br>
-                                <div class="flex-this w-100 margin-top-1">
+                                <div class="flex-this w-100 mt-1p">
                                     <div class="w-100 margin-right-1">
                                         <input class="newsletter-toggle" type="checkbox" id="tech" name="topic" value="tech" {% if tech == 'yes' %} checked {% endif %}>
                                         <label for="tech">Hub & API Updates</label><br><br>
@@ -36,7 +36,7 @@
                             </div>
                             <div class="flex-this column w-100">
                                 <p>Unsubscribe from all newsletter topics</p>
-                                <div class="flex-this w-100 margin-top-1">
+                                <div class="flex-this w-100 mt-1p">
                                     <div class="w-100 margin-right-1">
                                         <input class="newsletter-toggle" type="checkbox" id="unsubscribe" name="unsubscribe" value="unsubscribe" onchange="unsubscribeDeselect()">
                                         <label for="unsubscribe"> Yes, I would like to unsubscribe from all newsletter topics.</label>
