--- a/templates/partials/_connect-organization.html
+++ b/templates/partials/_connect-organization.html
@@ -51,7 +51,7 @@
         {% endif %}
      </div>
 
-     <div class="flex-this space-between margin-top-1">
+     <div class="flex-this space-between mt-1p">
          <div>
              <a 
                 class="default-a" 
