--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -556,14 +556,14 @@
                     value='<iframe width="100%" height="150" src="{{ request.scheme }}://{{ request.get_host }}{% if institution %}{% url "embed-notice-institution" institution.id %}{% elif researcher %}{% url "embed-notice-researcher" researcher.id %}{% endif %}" title="Local Contexts Open to Collaborate" frameborder="0"></iframe>' data-url='{{ request.scheme }}://{{ request.get_host }}{% if institution %}{% url "embed-notice-institution" institution.id %}{% elif researcher %}{% url "embed-notice-researcher" researcher.id %}{% endif %}' title="Local Contexts Open to Collaborate" id="embedToCopy" readonly>
                     <button class="copy-btn btn-in-input" data-target="embedToCopy">Copy Code</button>
                 </div>
-                <p class="font-size-14 margin-top-1 no-bottom-margin">Embed Options</p>
+                <p class="font-size-14 mt-1p no-bottom-margin">Embed Options</p>
                 <div class="flex-this">
-                    <select id="embedLayoutOptions" name="layout" class="project-sort w-30 margin-top-1 margin-right-1">
+                    <select id="embedLayoutOptions" name="layout" class="project-sort w-30 mt-1p margin-right-1">
                         <option class="darkteal-text pointer" value="1" selected>Icons Only</option>
                         <option class="darkteal-text pointer" value="2">Icon and Title</option>
                         <option class="darkteal-text pointer" value="3">Icon, Title and Text</option>
                     </select>
-                    <select id="embedAlignOptions" name="align" class="project-sort w-30 margin-top-1 margin-right-1">
+                    <select id="embedAlignOptions" name="align" class="project-sort w-30 mt-1p margin-right-1">
                         <option class="darkteal-text pointer" value="left" selected>Left Align</option>
                         <option class="darkteal-text pointer" value="right">Right Align</option>
                     </select>
