--- a/templates/partials/_project-contributor-view.html
+++ b/templates/partials/_project-contributor-view.html
@@ -95,7 +95,7 @@
                             {% include 'partials/_label-translation.html' %}
                         </div>
                     </div>
-                    <div class="border-bottom-solid-teal margin-top-1"></div>
+                    <div class="border-bottom-solid-teal mt-1p"></div>
                 </div>
             {% endfor %}
         {% endif %}
@@ -116,7 +116,7 @@
                             {% include 'partials/_label-translation.html' %}
                         </div>
                     </div>
-                    <div class="border-bottom-solid-teal margin-top-1"></div>
+                    <div class="border-bottom-solid-teal mt-1p"></div>
                 </div>
             {% endfor %}
         {% endif %}
