--- a/templates/partials/_update-account.html
+++ b/templates/partials/_update-account.html
@@ -31,7 +31,7 @@
                 <div class="flex-this side-nav-item {% if '/communities/update-community-boundary/' in request.path %} selected {% else %} grey-text {% endif %}">
                     <div class="w-20 margin-left-8 margin-top-8"><i class="fa-solid fa-location-dot fa-3x"></i></div>
                     <div class="w-80">
-                        <p class="margin-top-1">
+                        <p class="mt-1p">
                             <strong>Community Boundary</strong><br>Edit and Manage
                         </p>
                     </div>
