--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -294,7 +294,7 @@
         <div class="content-card-v2 content-card-space">
             <h3>Project Boundary</h3>
 
-            <div class="margin-bottom-1 margin-top-1 w-80">
+            <div class="margin-bottom-1 mt-1p w-80">
                 {% with entity=project %}
                     {% include 'boundary/show-remove-preexisting.html' %}
                     {% include 'boundary/update-boundary-via-native-land-and-shapefile.html' with create_mode=True %}
@@ -306,7 +306,7 @@
         <div class="content-card-v2 content-card-space">
             <h3>Visibility</h3>
 
-            <div class="margin-bottom-1 margin-top-1 w-80">
+            <div class="margin-bottom-1 mt-1p w-80">
                 {{ form.project_privacy.label }}* 
                 <div class="tooltip"><strong>?</strong>
                     <span class="tooltiptext">
