--- a/templates/accounts/create-profile.html
+++ b/templates/accounts/create-profile.html
@@ -30,7 +30,7 @@
         </div>
       </div>
 
-      <div class="flex-this w-100 space-between margin-top-1">
+      <div class="flex-this w-100 space-between mt-1p">
         <div class="w-50 margin-right-1">
           <label for="position">Position </label>
           {{ profile_form.position }}
@@ -41,7 +41,7 @@
         </div>
       </div>
 
-      <div class="flex-this w-100 space-between margin-top-1">
+      <div class="flex-this w-100 space-between mt-1p">
         <div class="w-50 margin-right-1">
           <label for="city_town">Town or city </label>
           {{ profile_form.city_town }}
