--- a/templates/communities/apply-labels.html
+++ b/templates/communities/apply-labels.html
@@ -119,7 +119,7 @@
                     <div class="flex-this wrap">
                         {% if bclabels %}
                             {% for bclabel in bclabels %}
-                                <div class="w-40 center-text margin-top-1">
+                                <div class="w-40 center-text mt-1p">
                                     <div class="flex-this column">
                                         <div class="label-margin">
                                             {% include 'bclabels/which-label.html' %}
@@ -153,7 +153,7 @@
                         <div class="flex-this wrap">
                             {% if tklabels %}
                                 {% for tklabel in tklabels %}
-                                    <div class="w-40 center-text margin-top-1">
+                                    <div class="w-40 center-text mt-1p">
                                         <div class="flex-this column">
                                             <div class="label-margin">
                                                 {% include 'tklabels/which-label.html' %}
