--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -19,7 +19,7 @@
         <div class="margin-top-16 w-100">
             <label for="institution_name">Institution Name</label>
             {{ noror_form.institution_name }}
-            <div class="w-100 margin-top-1">
+            <div class="w-100 mt-1p">
                 {% if noror_form.errors %}
                     {% for field_name, errors in noror_form.errors.items %}
                         <div class="red-text">
