--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -19,7 +19,7 @@
             <label for="institution_name">Institution Name</label>
             {{ form.institution_name }}
             <div id="suggestionsContainer"></div>
-            <div class="w-100 margin-top-1">
+            <div class="w-100 mt-1p">
                 {% if form.errors %}
                     {% for field_name, errors in form.errors.items %}
                         <div class="red-text">
