--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -755,14 +755,14 @@
                                     <input class="w-100 grey-chip" value='<iframe width="100%" height="150" src="{{ request.scheme }}://{{ request.get_host }}{% url "embed-project" project.unique_id %}" title="Local Contexts Project Identifiers" frameborder="0"></iframe>' type="text" data-url='{{ request.scheme }}://{{ request.get_host }}{% url "embed-project" project.unique_id %}' title="Local Contexts Project Identifiers" id="embedToCopy" readonly>
                                     <button class="copy-btn btn-in-input" data-target="embedToCopy">Copy Code</button>
                                 </div>
-                                <p class="font-size-14 margin-top-1 no-bottom-margin">Embed Options</p>
+                                <p class="font-size-14 mt-1p no-bottom-margin">Embed Options</p>
                                 <div class="flex-this">
-                                    <select id="embedLayoutOptions" name="layout" class="project-sort w-30 margin-top-1 margin-right-1">
+                                    <select id="embedLayoutOptions" name="layout" class="project-sort w-30 mt-1p margin-right-1">
                                         <option class="darkteal-text pointer" value="1" selected>Icons Only</option>
                                         <option class="darkteal-text pointer" value="2">Icon and Title</option>
                                         <option class="darkteal-text pointer" value="3">Icon, Title and Text</option>
                                     </select>
-                                    <select id="embedLanguageOptions" name="language" class="project-sort w-30 margin-top-1 margin-right-1">
+                                    <select id="embedLanguageOptions" name="language" class="project-sort w-30 mt-1p margin-right-1">
                                         {% if notices %}
                                             <option class="darkteal-text pointer" value="en" selected>English</option>
                                             {% for notice in notices %}
@@ -788,7 +788,7 @@
                                             {% endfor %}
                                         {% endif %}
                                     </select>
-                                    <select id="embedAlignOptions" name="align" class="project-sort w-30 margin-top-1 margin-right-1">
+                                    <select id="embedAlignOptions" name="align" class="project-sort w-30 mt-1p margin-right-1">
                                         <option class="darkteal-text pointer" value="left" selected>Left Align</option>
                                         <option class="darkteal-text pointer" value="right">Right Align</option>
                                     </select>
