--- a/templates/snippets/notifications.html
+++ b/templates/snippets/notifications.html
@@ -66,7 +66,7 @@
                                 href="{% url 'read' n.id %}"
                             {% endif %}
                         >
-                            <div class="flex-this space-between margin-top-1">
+                            <div class="flex-this space-between mt-1p">
                                 <div>
                                     <span 
                                         id="notification-label-tag-{{ n.id }}" 
@@ -129,7 +129,7 @@
                             {% endif %}
                         >
                         
-                            <div class="flex-this space-between margin-top-1">
+                            <div class="flex-this space-between mt-1p">
                                 <div>
                                     <span id="notification-label-tag-{{ n.id }}" 
                                         class="notification-type-tag white-text font-size-12 {% if n.viewed %} grey {% else %} orange-bg {% endif %}"
@@ -182,7 +182,7 @@
                             {% endif %}
                         >
 
-                            <div class="flex-this space-between margin-top-1">
+                            <div class="flex-this space-between mt-1p">
                                 <div>
                                     <span id="notification-label-tag-{{ n.id }}" 
                                         class="notification-type-tag white-text font-size-12 {% if n.viewed %} grey {% else %} orange-bg {% endif %}"
@@ -227,7 +227,7 @@
                             {% endif %}
                         >
 
-                            <div class="flex-this space-between margin-top-1">
+                            <div class="flex-this space-between mt-1p">
                                 <div>
                                     <span id="notification-label-tag-{{ n.id }}" 
                                         class="notification-type-tag white-text font-size-12 {% if n.viewed %} grey {% else %} orange-bg {% endif %}"
